--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -465,4 +465,7 @@ Andernfalls sollten Sie zumindest die Standorteinträge „Download“ und „Bl
   <data name="ErrorDownloadingBlog2" xml:space="preserve">
     <value>Fehler beim Herunterladen von '{0}' ({1}). Bitte versuchen Sie es in Kürze erneut. Hilfreich ist auch ein niedriger Wert (1-2) bei "Gleichzeitig zu verarbeitende Blogs".</value>
   </data>
+  <data name="ErrorMessage" xml:space="preserve">
+    <value>Fehler {0}: {1}</value>
+  </data>
 </root>
