--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.it.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.it.resx
@@ -341,4 +341,7 @@
   <data name="ProgressGetUrl2Short" xml:space="preserve">
     <value>Valutato {0} post del blog.</value>
   </data>
+  <data name="ErrorMessage" xml:space="preserve">
+    <value>Errore {0}: {1}</value>
+  </data>
 </root>
