--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.th.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.th.resx
@@ -321,4 +321,7 @@
   <data name="ProgressGetUrl2Short" xml:space="preserve">
     <value>ประเมินแล้ว {0} บล็อกโพสต์</value>
   </data>
+  <data name="ErrorMessage" xml:space="preserve">
+    <value>ข้อผิดพลาด {0}: {1}</value>
+  </data>
 </root>
