--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -620,14 +620,8 @@ E.g. 50 means to scan 50 posts per page.</value>
   <data name="ToolTipDownloadFrom" xml:space="preserve">
     <value>Crawl posts from this date</value>
   </data>
-  <data name="ToolTipDownloadTagsFromDescription" xml:space="preserve">
-    <value>Must be in YYYYMMDD format. Empty means from May 2007.</value>
-  </data>
   <data name="ToolTipDownloadTo" xml:space="preserve">
     <value>Crawl posts to this date</value>
-  </data>
-  <data name="ToolTipDownloadTagsToDescription" xml:space="preserve">
-    <value>Must be in YYYYMMDD format. Empty means to now.</value>
   </data>
   <data name="ToolTipDownloadFromDescription" xml:space="preserve">
     <value>Must be in YYYYMMDD format. Empty means from the beginning of the blog.</value>
@@ -1212,5 +1206,14 @@ The cookies for the privacy consent are saved and the process needs to be done o
   </data>
   <data name="ToolTipLogoutNT" xml:space="preserve">
     <value>Logout from newTumbl.com</value>
+  </data>
+  <data name="ToolTipDownloadLikesFromDescription" xml:space="preserve">
+    <value>Must be in YYYYMMDD format. Empty means from the beginning of the likes.</value>
+  </data>
+  <data name="ToolTipDownloadLikesFrom" xml:space="preserve">
+    <value>Crawl likes from this date</value>
+  </data>
+  <data name="ToolTipDownloadLikesTo" xml:space="preserve">
+    <value>Crawl likes to this date</value>
   </data>
 </root>
