Fix issue #417 Tumblr crawler sometimes doesn't get full resolution images

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -475,4 +475,7 @@ Möchten Sie es jetzt herunterladen?</value>
   <data name="ErrorRemovingOldFileOrFolder" xml:space="preserve">
     <value>Beim Bereinigen alter Dateien und Ordner ist ein Fehler aufgetreten.</value>
   </data>
+  <data name="ImageSizeNotRetrievable" xml:space="preserve">
+    <value>Die Bildgröße konnte für einen Beitrag in „{0}“ ({1}) nicht abgerufen werden.</value>
+  </data>
 </root>
