Add issue #411 Option to download/skip Twitter replies

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -967,4 +967,7 @@ Die zur Authentifizierung verwendeten Cookies werden gespeichert und der Authent
   <data name="ToolTipDownloadLikesTo" xml:space="preserve">
     <value>Lade Likes bis zu diesem Datum</value>
   </data>
+  <data name="DownloadReplies" xml:space="preserve">
+    <value>Lade Antworten</value>
+  </data>
 </root>
