--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -259,7 +259,7 @@
     <value>Foto Unterschrift: {0}</value>
   </data>
   <data name="LimitExceeded" xml:space="preserve">
-    <value>Limit exceeded: {0}. Die Verbindungen zur Tumblr api sollten verringert werden. Settings-&gt;Connection</value>
+    <value>Limit überschritten: {0}. Die Verbindungen zur Tumblr api sollten verringert werden. Settings-&gt;Connection</value>
   </data>
   <data name="ApplicationUpToDate" xml:space="preserve">
     <value>Die Anwendung ist aktuell.</value>
@@ -477,5 +477,8 @@ Möchten Sie es jetzt herunterladen?</value>
   </data>
   <data name="ImageSizeNotRetrievable" xml:space="preserve">
     <value>Die Bildgröße konnte für einen Beitrag in „{0}“ ({1}) nicht abgerufen werden.</value>
+  </data>
+  <data name="LimitExceededWaitPeriod" xml:space="preserve">
+    <value>Limit überschritten: {0}. Nach Ablauf der erforderlichen Wartezeit wird der Vorgang automatisch fortgesetzt.</value>
   </data>
 </root>
