--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.es.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.es.resx
@@ -472,4 +472,7 @@ De lo contrario, debe cambiar al menos las entradas de ubicación "Descargar" y 
   <data name="ImageSizeNotRetrievable" xml:space="preserve">
     <value>No se pudo recuperar el tamaño de la imagen para una publicación en '{0}' ({1}).</value>
   </data>
+  <data name="LimitExceededWaitPeriod" xml:space="preserve">
+    <value>Límite excedido: {0}. Continuará automáticamente después del período de espera requerido.</value>
+  </data>
 </root>
