Fix issues #404/#374 Refresh the cookies on auth error and try to continue
- Occasionally something happens to the cookies and Tumblr returns an auth error on the next request.
- In case of an auth error the cookies are fetched from the WebView instance again and the request is repeated.
- It's not totally clear yet why this happens.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -481,4 +481,7 @@ Möchten Sie es jetzt herunterladen?</value>
   <data name="LimitExceededWaitPeriod" xml:space="preserve">
     <value>Limit überschritten: {0}. Nach Ablauf der erforderlichen Wartezeit wird der Vorgang automatisch fortgesetzt.</value>
   </data>
+  <data name="AuthErrorRetrying" xml:space="preserve">
+    <value>Authentifizierungsfehler (versuche fortzufahren): {0}</value>
+  </data>
 </root>
